add register button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,9 @@
     <input type="text" id="lname" name="lname">
 
     </form>
+
+    <button type="button" onclick="alert('Registered!')"> Register</button>
+
     <button type="button" onclick="alert('Input Registered')"> Input</button>
 
     <button type="button" onclick="alert('Survey has ended')">End</button>
