--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,9 @@
     <title>Surveyify</title>
 
   </head>
-  <body>
+  <!-- <body> -->
 
-    <div id="top image and title">
+    <!-- <div id="top image and title">
       <h1 class="name">Survey</h1>
       <img height="200px" width="200px" class="toppicture" src="images/surveyphoto.png">
         <img src="surveyphoto.png">
@@ -29,7 +29,9 @@
 
     <button type="button" onclick="alert('Input Registered')"> Input</button>
 
-    <button type="button" onclick="alert('Survey has ended')">End</button>
+    <button type="button" onclick="alert('Survey has ended')">End</button> -->
 
-  </body>
+  <!-- </body> -->
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </html>
